Fixed a bug related to visibility, now both visible, and display css properties can be toggled as needed

--- a/css/index.css
+++ b/css/index.css
@@ -8,3 +8,7 @@ body {
     padding: 5px;
     width: 200px;
 }
+
+#me_details {
+    display: none;
+}
